--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -241,7 +241,8 @@
 
       html {
         box-sizing: border-box;
-        font-size: calc(var(--font-body-scale) * 62.5%);
+        /* font-size: calc(var(--font-body-scale) * 62.5%); */
+        font-size: 12px;
         height: 100%;
       }
 
