--- a/sections/comparison.liquid
+++ b/sections/comparison.liquid
@@ -10,7 +10,6 @@
     .section-{{ section.id }}-padding {
       padding-top: {{ section.settings.padding_top }}px;
       padding-bottom: {{ section.settings.padding_bottom }}px;
-
     }
   }
 {%- endstyle -%}
@@ -18,6 +17,7 @@
 <div
   class="comparison color-{{ section.settings.color_scheme }} gradient section-padding"
   style="--padding-top: {{ section.settings.padding_top }}; --padding-bottom: {{ section.settings.padding_bottom }};"
+  aria-labelledby="comparison-heading"
 >
   <div
     class="page-width section-{{ section.id }}-padding {% if settings.animations_reveal_on_scroll %}scroll-trigger animate--slide-in{% endif %}"
@@ -26,7 +26,7 @@
     {% endif %}
   >
     <div class="comparison-container">
-      <div class="comparison-info">
+      <div class="comparison-info" role="complementary">
         {% for block in section.blocks %}
           {% if block.type == 'comparison' %}
             <div
@@ -36,8 +36,10 @@
                 style="--animation-order: {{ forloop.index }};"
               {% endif %}
             >
-              <h3 class="comparison-title">{{ block.settings.title }}</h3>
-              <div class="comparison-description">
+              <h3 class="comparison-title" id="comparison-heading" role="heading" aria-level="3">
+                {{ block.settings.title }}
+              </h3>
+              <div class="comparison-description" role="text">
                 {{ block.settings.description }}
               </div>
             </div>
@@ -51,29 +53,31 @@
           data-cascade
           style="--animation-order: 1;"
         {% endif %}
+        role="table"
+        aria-label="Product comparison table"
       >
-        <div class="comparison-brands-header">
-          <div class="brand-column feature-column">&nbsp;</div>
-          <div class="brand-column barkmate-column">
+        <div class="comparison-brands-header" role="row">
+          <div class="brand-column feature-column" role="columnheader" aria-label="Feature">&nbsp;</div>
+          <div class="brand-column barkmate-column" role="columnheader" aria-label="Barkmate">
             <h3 class="brand-title brand-logo">
               {{- 'logo-long-black.svg' | inline_asset_content -}}
             </h3>
           </div>
-          <div class="brand-column other-column">
+          <div class="brand-column other-column" role="columnheader" aria-label="Other mats">
             <h3 class="brand-title">Inne maty</h3>
           </div>
         </div>
 
         {% for block in section.blocks %}
           {% if block.type == 'comparison_item' %}
-            <div class="comparison-brands">
-              <div class="brand-column feature-column">
+            <div class="comparison-brands" role="row">
+              <div class="brand-column feature-column" role="cell">
                 {{ block.settings.title }}
               </div>
-              <div class="brand-column barkmate-column">
+              <div class="brand-column barkmate-column" role="cell">
                 <div class="brand-value">{{ block.settings.value1 }}</div>
               </div>
-              <div class="brand-column other-column">
+              <div class="brand-column other-column" role="cell">
                 <div class="brand-value">{{ block.settings.value2 }}</div>
               </div>
             </div>
