--- a/assets/base.css
+++ b/assets/base.css
@@ -93,6 +93,8 @@
   padding: 0 1.33333rem;
 }
 
+.announce
+
 body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   max-width: 100%;
 }
@@ -2262,6 +2264,7 @@ input[type='checkbox'] {
   margin: 0;
   letter-spacing: 0.1rem;
   min-height: 3.8rem;
+  font-size: 1rem;
 }
 
 .announcement-bar-slider--fade-in-next .announcement-bar__message,
