--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -460,6 +460,9 @@
 
 .banner__box .banner__heading + * {
   margin-top: 1rem;
+  font-size: 1.333rem;
+  max-width: 525px;
+  line-height: 24px;
 }
 
 .banner__buttons {
