--- a/assets/section-product-showcase.css
+++ b/assets/section-product-showcase.css
@@ -70,6 +70,10 @@
   transition: transform 0.2s ease;
 }
 
+.product-showcase__image:last-child {
+  border-bottom: none;
+}
+
 .product-showcase__image img {
   width: 100%;
   height: auto;
@@ -83,12 +87,13 @@
   top: 0;
   overflow: hidden;
   border-left: 1px solid black;
+  padding: 3rem;
 }
 
 .product-showcase__image-primary img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   /* border-radius: 6px; */
 }
 
@@ -108,7 +113,8 @@
     margin-top: 1rem;
     position: relative;
     max-height: calc(100vh - 61px);
-    border: none
+    border: none;
+    padding: 1rem;
   }
 
   .product-showcase__image-primary img {
