--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -302,8 +302,14 @@
   width: 3rem;
 }
 
+@media screen and (min-width: 750px) {
+  .footer__content-bottom {
+    margin-bottom: 0;
+  }
+}
+
 /* Media Queries */
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
   .footer .grid {
     display: block;
   }
@@ -505,10 +511,6 @@
 
   .policies li a {
     padding: 0;
-  }
-
-  .footer__content-bottom {
-    margin-bottom: 0;
   }
 }
 
