--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -32,7 +32,7 @@
     {% endif %}
   >
     {%- unless section.settings.title == blank -%}
-      <div class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin multicolumn__title">
+      <div class="title-wrapper--self-padded-mobile title-wrapper--no-top-margin multicolumn__title">
         <h2 class="title inline-richtext {{ section.settings.heading_size }}">
           {{ section.settings.title }}
         </h2>
@@ -87,7 +87,7 @@
                     <span class="svg-wrapper">
                       {{ 'logo-short-black.svg' | inline_asset_content }}
                     </span>
-                    <h4 class="multicolumn-card__title">Barkmate</h4>
+                    <h5 class="multicolumn-card__title">Barkmate</h5>
                   </div>
                 {% endif %}
                 <div class="multicolumn-card__image-wrapper multicolumn-card__image-wrapper--{{ section.settings.image_width }}-width{% if section.settings.image_width != 'full' or spaced_image %} multicolumn-card-spacing{% endif %}">
