--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -54,19 +54,18 @@
   gap: 4rem;
 }
 
+@media screen and (max-width: 750px) {
+  .collapsible-content-wrapper-narrow {
+    gap: 3rem;
+  }
+}
+
 .collapsible-content__header {
   word-break: break-word;
 }
 
 .collapsible-content__heading {
-  margin-bottom: 2rem;
-  margin-top: 0;
-}
-
-@media screen and (min-width: 750px) {
-  .collapsible-content__heading {
-    margin-bottom: 3rem;
-  }
+  margin: 0;
 }
 
 .accordion.content-container {
@@ -100,7 +99,7 @@
 
 .collapsible-row-layout .accordion summary,
 .collapsible-row-layout .accordion .accordion__content {
-  padding: 1.5rem;
+  padding: 1.5rem 2rem;
 }
 
 .collapsible-row-layout .accordion .accordion__content {
@@ -109,6 +108,12 @@
 
 .collapsible-content summary:hover {
   background: rgba(var(--color-foreground), 0.04);
+}
+
+@media screen and (max-width: 750px) {
+  .collapsible-row-layout .accordion {
+    margin-bottom: 1rem;
+  }
 }
 
 /* check for flexbox gap in older Safari versions */
