--- a/assets/component-accordion.css
+++ b/assets/component-accordion.css
@@ -20,7 +20,6 @@
 }
 
 .accordion {
-  margin-top: 2.5rem;
   margin-bottom: 0;
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
@@ -48,10 +47,12 @@
 }
 
 .accordion__content {
+  max-width: 800px;
   margin-bottom: 1.5rem;
   word-break: break-word;
   overflow-x: auto;
   padding: 0 0.6rem;
+  font-weight: 400;
 }
 
 .accordion__content img {
