--- a/sections/info-moving-bar.liquid
+++ b/sections/info-moving-bar.liquid
@@ -10,7 +10,7 @@
           width="24"
           height="24"
         >
-        <span>{{ block.settings.text }}</span>
+        <span class="item_content">{{ block.settings.text }}</span>
       </div>
     {% endfor %}
     {% for block in section.blocks %}
@@ -21,7 +21,7 @@
           width="24"
           height="24"
         >
-        <span>{{ block.settings.text }}</span>
+        <span class="item_content">{{ block.settings.text }}</span>
       </div>
     {% endfor %}
   </div>
