Fix footer styling

--- a/assets/base.css
+++ b/assets/base.css
@@ -93,8 +93,6 @@
   padding: 0 1.33333rem;
 }
 
-.announce
-
 body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   max-width: 100%;
 }
@@ -3609,4 +3607,10 @@ details-disclosure > details {
   100% {
     transform: translateX(100%) scaleX(0);
   }
+}
+
+.footer-wrapper {
+  position: relative;
+  top: -78px;
+  margin-bottom: -78px;
 }
