--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -248,18 +248,13 @@
     {%- endunless -%}
   {%- endif -%}
 </footer>
-<div
-  class="footer__content-bottom{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
-  {% if settings.animations_reveal_on_scroll %}
-    data-cascade
-  {% endif %}
->
+<div class="footer__content-bottom">
   <div class="footer__content-bottom-wrapper page-width{% if section.settings.enable_country_selector == false and section.settings.enable_language_selector == false %} footer__content-bottom-wrapper--center{% endif %}">
     <div class="footer__copyright caption">
       <small class="copyright__content"
         >&copy; {{ 'now' | date: '%Y' }}, {{ shop.name | link_to: routes.root_url -}}
       </small>
-      <small class="copyright__content"><a href="https://www.linkedin.com/in/savickik/">🛠️ Karol Sawicki</a></small>
+      <small class="copyright__content"><a href="https://www.linkedin.com/in/savickik/">🐩 Karol Sawicki</a></small>
     </div>
   </div>
 </div>
